Fix responsivenss on mobile menu

--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,7 @@
 .header {
   display: none;
-  position: inherit;
-  background-color: #f7f8fc!important;
-  padding: 20px 20px;
+  background-color: #f7f8fc !important;
+  padding: 10px 20px;
   z-index: 99999;
   width: 100%;
   height: 100px;
@@ -15,18 +14,19 @@
   text-align: center;
   padding: 12px;
   text-decoration: none;
-  font-size: 14px; 
+  font-size: 14px;
   line-height: 25px;
   border-radius: 4px;
   margin: 4px;
 }
 
 .header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-  margin-top: -30px;
-  margin-left: 40px;
-  margin-bottom: 20px;
+  margin-top: -20px;
+  max-width: 25%;
+}
+
+.header a.logo img {
+  height: 57px;
 }
 
 .header a:hover {
@@ -36,21 +36,73 @@
 
 .header a.active {
   color: white;
-  background-image: linear-gradient(180deg,#474ab6 0%,#9271f6 100%)!important
+  background-image: linear-gradient(
+    180deg,
+    #474ab6 0%,
+    #9271f6 100%
+  ) !important;
 }
 
 .header-right {
   float: right;
 }
 
-@media screen and (max-width: 500px) {
+#menu-btn {
+  opacity: 0;
+}
+
+@media screen and (max-width: 767px) {
   .header a {
     float: none;
     display: block;
-    text-align: left;
+    text-align: center;
+    margin: 0;
+    border-radius: unset;
   }
-  
+
   .header-right {
     float: none;
+    display: none;
+    background: #f7f8fc;
+  }
+
+  .menu-icon {
+    display: inline-block;
+    cursor: pointer;
+    position: absolute;
+    right: 25px;
+    top: 30px;
+  }
+
+  .bar1,
+  .bar2,
+  .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+
+  .change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+  }
+
+  .change .bar2 {
+    opacity: 0;
+  }
+
+  .change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+  }
+
+  .menu-icon span {
+    width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0;
+    display: block;
   }
 }
